--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=18"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-server": "node app/server.js"
   },
   "keywords": [],
   "author": "",
